Fixing top nav bar on mobile

--- a/base_theme/static/scss/scss/layout/header/_top_nav.scss
+++ b/base_theme/static/scss/scss/layout/header/_top_nav.scss
@@ -17,6 +17,7 @@
 		height: 21px;
 		@include small {
 			padding: 0px;
+			height: 0px;
 		}
 	}
 	form {
@@ -73,7 +74,7 @@
 	margin-left: -115px;
 	height: 21px !important;
 	@include small {
-		height: 5px;
+		height: 5px !important;
 		margin-left: 0px;
 		width: 100%;
 	}
